fix: make the primary info and services sections centered, remove bootstrap layout and add auto margins, make services image appear pleasing on smallest screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,11 +86,13 @@ footer {
 
 .primary-info-wrapper {
     background-color: white;
-    margin-top: 20px;
     box-shadow: 0 0 10px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     padding: 30px;
+    width: 90%;
+    margin: 20px auto 10px;
 }
 
 .primary-info-wrapper h1 {
@@ -117,6 +119,19 @@ footer {
 
 
 /* --------------------------------------------Home page services*/
+.services-wrapper { 
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 30px;
+    margin: 10px auto 10px;
+}
+
+.services-intro {
+    max-width: 450px;
+    margin: 20px auto 0;
+    font-weight: 500;
+}
 
 .services-info {
 border: solid;
@@ -124,21 +139,25 @@ border-color: rgba(126, 18, 18, 1);
 background-color: white;
 border-width: 6px;
 width: 400px;
+/* To ensure the image still looks good on even the smallest phones */
+min-width: 300px;
 margin: 2px;
 }
 
 .services-image {
 height:380px;
 width:400px;
+/* To ensure the image still looks good on even the smallest phones */
+min-height:300px;
+min-width:300px;
 background-image: url(../images/electric-guitar.jpeg);
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
 overflow: hidden;
 border-radius: 2%;
-margin: 5px;
+margin: 2px;
 }
-
 
 /* --------------------------------------------Home page testimonials*/
 .quote {
